[package]
name = "geyserbench"
version = "1.2.3"
edition = "2024"

[dependencies]
tokio-stream = "0.1.17"
prost = "0.14"
prost-types = "0.14"
serde = "1"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
futures = "0.3.31"
futures-util = "0.3.31"
bs58 = "0.5.1"
bytes = "1.10.0"
bincode = "1.3.3"
solana-entry = "2"
solana-pubkey = "2"
solana-sdk = "=2.2.1"

# UDP shred reconstruction dependencies
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery" }
solana-perf = "=2.2.1"
solana-streamer = "=2.2.1"
solana-net-utils = "=2.2.1"
solana-metrics = "=2.2.1"
ahash = "0.8"
itertools = "0.14.0"
crossbeam-channel = "0.5.8"
rand = "0.8"
socket2 = "0.5"
tikv-jemallocator = "0.6"
lazy_static = "1.5.0"
dashmap = "6"
comfy-table = "7.1.0"
anyhow = "1"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
serde_json = "1"
blake3 = "1"
hex = "0.4"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-queue = "0.3"
thiserror = "1"
thorstreamer-grpc-client = "0.1.3"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
